# serverless-sns

./: .env.example  README.md  compose.yml
backend/: README.md  pyproject.toml  samconfig.toml  template.yaml
backend/.aws-sam/: build.toml
backend/db/: table.py  utils.py
backend/events/: event.json
backend/events/create_tweet/: event.json
backend/events/download_url/: event.json
backend/events/fetch_tweets/: event.json
backend/events/presigned_url/: event.json
backend/hello_world/: app.py
backend/presigned_url/: Dockerfile  download_url_handler.py  main.py  pyproject.toml  requirements.txt  upload_url_handler.py
backend/scripts/: create_table.py
backend/tweet/: Dockerfile  create_tweet_handler.py  fetch_tweet_handler.py  main.py  pyproject.toml  requirements.txt
backend/utils/: s3_client.py
docs/: db_table.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/create_tweet/: route.ts
frontend/src/app/api/downloadUrl/: route.ts
frontend/src/app/api/fetch_tweet/: route.ts
frontend/src/app/api/getUploadUrl/: route.ts
frontend/src/app/api/home/: route.ts
frontend/src/app/api/tweet/: route.ts
frontend/src/app/constants/: url.ts
frontend/src/app/home/: home.hooks.ts  page.tsx
frontend/src/app/hooks/: session.ts
frontend/src/app/store/: session.ts  tweet.ts
frontend/src/app/tweet/: page.tsx  tweet.hooks.ts
frontend/src/app/type/: types.ts
frontend/src/app/utils/: baseApi.ts
frontend/src/constants/: auth.ts
sam-app/: template.yaml
(+13 files in other folders)
