[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["matsuki_takeshi <takeshi.matsuki@genialtech.io>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "1.26.86"
python-version = "^0.0.2"
and = "^66.0.2"
botocore = "1.29.86"
jmespath = "1.0.1"
python-dateutil = "2.8.2"
pyyaml = "6.0"
s3transfer = "0.6.0"
six = "1.16.0"
urllib3 = "1.26.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
